# agentic-data-lab

./: .env  .gitignore  README.md  agentic_ai.py  agno_agentic_ai.py  csv_to_duckdb.py  example_usage.py  main.py  my_f1_database.duckdb  pyproject.toml  requirements.txt  setup_project.ps1  simple_run.py  test.py
etl/: extract_agent.py  extract_inspect.py  helpers.py  load_agent.py  transform_agent.py  visualize_agent.py
orchestrator/: run_pipeline.py
output/custom_query/: analysis.txt  result.csv
output/driver_comparison/: analysis.txt  result.csv
output/statistical_summary/: analysis.txt  result.csv
output/top_drivers/: analysis.txt  result.csv
output/winners_analysis/: analysis.txt  result.csv
output/yearly_trends/: analysis.txt  result.csv
processed/: ai_transformed_result.csv  drivers_clean.csv  metadata.json  races_clean.csv  results_clean.csv  transformed_result.csv  warehouse.duckdb
